* Tue Sep 24 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.1.3-0
- Change metadata OS version check to use new simplib check that returns
  false or true if the OS is supported according to metadata.json.
  If it is not supported, do nothing (instead of failing).

* Mon Sep 02 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.1.3-0
- RedHat 8 does not support TCP Wrappers
- Add call to simplib:assert_metadata to check the OS
  is supported.
- Update upperbound of simplib.

* Fri Mar 22 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 6.1.2-0
- Use simplib::bracketize in lieu of deprecated Puppet 3 bracketize
- Fix template bug that prevented some IPv6 addresses from being
  properly formatted in /etc/hosts.allow.

* Tue Mar 19 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.2-0
- Use simplib::nets2ddq in lieu of deprecated Puppet 3 nets2ddq

* Thu Feb 14 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
- Use simplib::ipaddresses() in lieu of ipaddresses(), a deprecated
  simplib Puppet 3 function.
- Expanded the upper limit of the concat and stdlib Puppet module versions
- Fixed URLs in the README.md

* Fri Aug 24 2018 Nick Miller <nick.miller@onypoint.com> - 6.1.0-0
- Add support for Puppet 5 and OEL
- Added $package_ensure parameter
  - Changed the package from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`

* Fri Feb 09 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.3-0
- Update upperbound on puppetlabs/concat version to < 5.0.0

* Fri Aug 18 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
- Update concat version in metadata.json & build/rpm_metadata/requires

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.1-0
- Update puppet dependency and remove OBE pe dependency in metadata.json

* Fri Dec 16 2016 Trevor Vaughan <tvaughan@onyxpoinit.com> - 6.0.0-0
- Puppet 4 update
- Added strong typing
- Converted to using puppetlabs-concat
