@@ -1,3 +1,9 @@
+* Tue Oct 08 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.2.0-0
+- Drop Puppet 4 support
+- Add Puppet 6 support
+- Add puppetlabs-stdlib 6 support
+- Add puppetlabs-concat 6 support
+
 * Tue Sep 24 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.1.3-0
 - Change metadata OS version check to use new simplib check that returns
   false or true if the OS is supported according to metadata.json.
